--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
-    <string name="app_name">Locket Android</string>
+    <string name="app_name">Diary Buddy</string>
+    <string name="diary_buddy_widget_description">Widget of size 2x2 for displaying images</string>
+    <!--
+    This string is used for square devices and overridden by hello_world in
+    values-round/strings.xml for round devices.
+    -->
+    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
+    <string name="title_activity_diary_buddy_wear">DiaryBuddyWear</string>
+    <string name="tile_label">Example tile</string>
+    <string name="complication_label">Example complication</string>
 </resources>
