--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     values-round/strings.xml for round devices.
     -->
     <string name="hello_world">From the Square world,\nHello, %1$s!</string>
-    <string name="title_activity_diary_buddy_wear">DiaryBuddyWear</string>
-    <string name="tile_label">Example tile</string>
-    <string name="complication_label">Example complication</string>
+<!--    <string name="title_activity_diary_buddy_wear">DiaryBuddyWear</string>-->
+<!--    <string name="tile_label">Example tile</string>-->
+<!--    <string name="complication_label">Example complication</string>-->
 </resources>
